Status update, CSS fix for ugly text-align on mobile

--- a/themes/memex/assets/css/style.css
+++ b/themes/memex/assets/css/style.css
@@ -235,6 +235,9 @@ color: var(--fg-muted);
   }
 }
 @media (max-width: 640px) {
+  p {
+    text-align: left;
+  }
   body {
     font-size: 14pt;
   }
